--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,14 @@
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 xcuserdata
 profile
 *.moved-aside
+*.xccheckout
 DerivedData
+*.xcuserstate
 *.hmap
 
 # Cocoapods
