--- a/DeskKit/Podfile
+++ b/DeskKit/Podfile
@@ -1,6 +1,6 @@
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC', :tag => '1.0.6'
+pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC', :branch => 'tickets/APIC-127-remove-dependency-on-main-queue-for-api-callbacks'
 pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa', :tag => '1.0.3'
 
 target 'DeskKitTests', :exclusive => true do
