--- a/DeskKitExample/Podfile
+++ b/DeskKitExample/Podfile
@@ -1,6 +1,6 @@
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC.git', :branch => 'tickets/APIC-127-remove-dependency-on-main-queue-for-api-callbacks'
+pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC.git', :branch => 'develop'
 pod 'DeskKit', :path => '../DeskKit'
 pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa.git', :tag => '1.0.3'
 
