--- a/DeskKit/Podfile
+++ b/DeskKit/Podfile
@@ -7,11 +7,11 @@ target 'DeskKitTests', :exclusive => true do
     pod 'OCMock', '~>3.0.2'
 end
 
-post_install do |installer_representation|
-    installer_representation.project.targets.each do |target|
-        target.build_configurations.each do |config|
-            config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
-        end
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
     end
+  end
 end
 
