--- a/DeskKit/Podfile
+++ b/DeskKit/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC', :branch => 'develop'
-pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa', :tag => '1.0.3'
+pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC', :tag => '1.1.0'
+pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa', :tag => '1.0.4'
 
 target 'DeskKitTests', :exclusive => true do
     pod 'OCMock', '~>3.0.2'
