--- a/DeskKitExample/Podfile
+++ b/DeskKitExample/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC.git', :branch => 'develop'
+pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC.git', :tag => '1.1.0'
 pod 'DeskKit', :path => '../DeskKit'
-pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa.git', :tag => '1.0.3'
+pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa.git', :tag => '1.0.4'
 
 target 'DeskKitExampleTests', :exclusive => true do
     pod 'OCMock', '~>3.0.2'
