--- a/DeskKitExample/Podfile
+++ b/DeskKitExample/Podfile
@@ -1,9 +1,7 @@
+# Uncomment this line to define a global platform for your project
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'git@github.com:forcedotcom/DeskApiClient-ObjC.git', :tag => '1.1.0'
-pod 'DeskKit', :path => '../DeskKit'
-pod 'DeskCommon', :git => 'git@github.com:forcedotcom/DeskCommon-Cocoa.git', :tag => '1.0.4'
+# Uncomment this line if you're using Swift
+# use_frameworks!
 
-target 'DeskKitExampleTests', :exclusive => true do
-    pod 'OCMock', '~>3.0.2'
-end
+pod 'DeskKit', '~> 1.2.1'
