--- a/DeskKit/Podfile
+++ b/DeskKit/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '8.0'
 
 #pod 'DeskAPIClient', '~> 2.0.0'
-pod 'DeskAPIClient', :git => 'https://github.com/forcedotcom/DeskApiClient-ObjC.git', :branch => 'tickets/APIC-141-Convert-DSAPIClient-to-non-singleton'
+pod 'DeskAPIClient', :git => 'https://github.com/forcedotcom/DeskApiClient-ObjC.git', :branch => 'develop'
 
 target 'DeskKitTests', :exclusive => true do
     pod 'OCMock', '~> 3.0.2'
