--- a/DeskKitExample/Podfile
+++ b/DeskKitExample/Podfile
@@ -4,6 +4,4 @@ platform :ios, '8.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
-#pod 'DeskKit', '~> 2.1.0'
-pod 'DeskAPIClient', '~> 2.0.0'
-pod 'DeskKit', :git => 'git@github.com:forcedotcom/DeskMobileSDK-iOS.git', :branch => 'tickets/MSDKI-39-Make-it-easier-for-clients-to-style-the-SDK-differently-than-their-app'
+pod 'DeskKit', '~> 3.0.0’
