update DeskAPIClient pod version

--- a/DeskKit/Podfile
+++ b/DeskKit/Podfile
@@ -1,6 +1,6 @@
 platform :ios, '8.0'
 
-pod 'DeskAPIClient', :git => 'https://github.com/forcedotcom/DeskApiClient-ObjC.git', :branch => 'tickets/APIC-140-Update-API-layer-with-proper-Etag-cache-policies'
+pod 'DeskAPIClient', '~> 2.0'
 
 target 'DeskKitTests', :exclusive => true do
     pod 'OCMock', '~> 3.0.2'
