--- a/DeskKitExample/Podfile
+++ b/DeskKitExample/Podfile
@@ -4,4 +4,6 @@ platform :ios, '8.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 
-pod 'DeskKit', '~> 3.0'
+target 'DeskKitExample' do
+    pod 'DeskKit', '~> 3.0'
+end
